get list rating by project id
